[package]
name = "rs-yew-test01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"]}
implicit-clone = { version = "0.3.5", features = ["map"] }
wasm-bindgen = "0.2"
web-sys = "0.3"

